# Otp_project

./: README.md  autoinstal.sh  autoinstall.sh  create_database_tables.py  main.py  pyproject.toml
source/data/: __init__.py  configuration.py  localization.json
source/database/: __init__.py  connector.py  creator.py  deleter.py  inserter.py  selector.py  updater.py
source/handlers/: __init__.py
source/handlers/admin/: __init__.py  answer_support.py
source/handlers/buyer/: __init__.py
source/handlers/seller/: __init__.py  ask_support.py  edit_product.py  pay.py  products.py  seller.py  subscription.py  trial.py  webhook.py
source/handlers/user/: __init__.py  products.py  seller.py  start.py  webhook.py
source/keyboard/: inline.py
source/utils/: __init__.py  models.py
source/utils/localizer/entity/: button.py  message.py
source/utils/schedulers/: subscription_checker.py
source/utils/states/: admin_states.py  seller_states.py
